--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
     <title>Descomplica QGIS - Avançado</title>
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <ul class="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Estrutura do Curso</a></li>
+                    <li><a href="#">Instrutor</a></li>
+                    <li><a href="#">Perguntas Frequentes</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12" id="firstBanner">
+                <img src="img/banner.jpg" alt="Mapa de terreno" class="banner">
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
+    
 </body>
 </html>
