--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
+                <img src="img/logo.png" alt="Logo do Descomplica QGIS" id="logo">
+            </div>
+            <div class="col-md-6">
                 <ul class="menu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Estrutura do Curso</a></li>
