adjusting banner, images and fonts

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
         <div class="row">
             <div class="col-md-12" id="firstBanner">
-                <img src="img/banner.jpg" alt="Mapa de terreno" class="banner">
+                <h1 class="title">DOMINE A FERRAMENTA Nº 1 DE PRODUÇÃO DE MAPAS</h1>
+                <h2 class="subtitle">APRENDA QGIS DE FORMA RÁPIDA, PRÁTICA E DESCOMPLICADA</h2>
             </div>
         </div>
     </div>
