new icon section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
                 <h2 class="subtitle">APRENDA QGIS DE FORMA RÁPIDA, PRÁTICA E DESCOMPLICADA</h2>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-4" id="benefits">
+                <img src="img/houseGreen.png" class="icon">
+                <h1 class="benefitTitle">COMODIDADE</h1>
+                <p class="benefitDescription">Você irá aprender a criar mapas profissionais no conforto da sua casa, no horário que quiser.</p>
+            </div>
+            <div class="col-md-4" id="benefits">
+                <img src="img/pcGreen.png" class="icon">
+                <h1 class="benefitTitle">PRATICIDADE</h1>
+                <p class="benefitDescription">Você recebe imediatamente os dados de acesso ao curso para começar ainda HOJE.</p>
+            </div>
+            <div class="col-md-4" id="benefits">
+                <img src="img/clockGreen.png" class="icon">
+                <h1 class="benefitTitle">APRENDIZADO ACELERADO</h1>
+                <p class="benefitDescription">Aulas sem enrolação, feitas para você que não tem tempo a perder.</p>
+            </div>
+        </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
