new section map

--- a/index.html
+++ b/index.html
@@ -50,6 +50,25 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-6" id="map">
+                <img src="img/banner2.jpg" class="map">
+            </div>
+            <div class="col-md-6" id="mapsText">
+                <h1 class="mapsTitle">VOCÊ SE CONSIDERA INDEPENDENTE NA PRODUÇÃO DE MAPAS?</h1>
+                <p class="mapDescription">
+                    Imagine a seguinte situação:</br></br>
+                    Você está participando de uma seleção para uma vaga de emprego. </br></br>
+                    Você recebe uma mensagem que avançou para a fase final e agora terá que fazer uma prova prática de <span class="bold">produção de mapas no QGIS</span>. Esta prova é obrigatória para comprovar seu conhecimento nesta área, já que é uma função que exercerá caso fique com a vaga.</br></br>
+                    Quão confortável você ficaria com esta prova?</br></br>
+                    Confiante, indiferente, preocupado?</br></br>
+                    Faço essa pergunta porque escuto bastante por aí pessoas falarem que sabem o básico ou  que <span class="italics">"conseguem se virar"</span>, mas na hora da prática travam em alguma etapa e não conseguem produzir nada.</br></br>
+                    Você se identificou com esse perfil? Já perdeu alguma oportunidade por não saber utilizar o QGIS? Já desistiu de fazer algum mapa porque travou em alguma etapa?</br></br>
+                    <span class="bold">Então chegou a sua hora de dominar o QGIS de uma vez por todas!</span></br></br>
+                </p>
+            </div>
+        </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
