--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row headerLogo">
             <div class="col-md-6">
                 <img src="img/logo.png" alt="Logo do Descomplica QGIS" id="logo">
             </div>
