--- a/index.html
+++ b/index.html
@@ -69,6 +69,74 @@
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-12" id="carousel">
+                <h1 class="carouselTitle">Estrutura do Curso (Turma Avançada) </h1>
+                <h2 class="carouselSubtitle">(Clique no módulo que deseja explorar)</h2>
+                <div class="carousel slide" id="carousel-382039">
+                    <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
+                            <div class="carousel-caption">
+                                <h1>Módulo 1</h1>
+                                <p>
+                                    <b>Teoria Express</b></br>
+                                    Conceitos Iniciais</br>
+                                    Tipos de Dados</br>                                   
+                                    Datum</br>                          
+                                    Projeções Cartográficas</br>                                   
+                                    Sistema de Referência de Coordenadas</br>                                   
+                                    Elementos de um Mapa</br>                                   
+                                    Modelos Digitais</br>                               
+                                    Web Services</br>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
+                            <div class="carousel-caption">
+                                <h1>Módulo 2</h1>
+                                <p>
+                                    <b>Introdução ao QGIS</b></br>
+                                    Instalando o QGIS</br>                 
+                                    Onde Baixar Dados</br>
+                                    Interface do Programa</br>                     
+                                    Abrir e Salvar</br>            
+                                    Configurações iniciais</br>              
+                                    Propriedades e Tabela de Atributos</br>                        
+                                    Trabalhando com Sistemas de Referência de Coordenadas</br>                 
+                                    Adicionar Camada Vetorial</br>                         
+                                    Adicionar Camada Raster</br>                     
+                                    Adicionar Geopackage</br>                       
+                                    Conectando WMS, WFS e WCS</br>                           
+                                    Estatística, Distâncias, Áreas e Ângulos</br>                         
+                                    Seleção de Feições</br>                         
+                                    Instalando Plugins</br>                       
+                                    Carregando Mapa de Fundo</br>                                  
+                                    Acelerando o QGIS</br>                     
+                                    Adicionando Decorações</br>                                    
+                                    Favoritos
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
+                            <div class="carousel-caption">
+                                <h4>
+                                    Third Thumbnail label
+                                </h4>
+                                <p>
+                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div> <a class="carousel-control-prev" href="#carousel-382039" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-382039" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
