--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         </div>
 
         <div class="row">
+            <div class="col-md-12" id="iconsTitle">
+                <h1 class="carouselTitle">Conheça os benefícios</h1>
+            </div>
+        <div class="row">
             <div class="col-md-4" id="benefits">
                 <img src="img/houseGreen.png" class="icon">
                 <h1 class="benefitTitle">COMODIDADE</h1>
