add new carousel

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <div class="col-md-12" id="iconsTitle">
                 <h1 class="carouselTitle">Conheça os benefícios</h1>
             </div>
+        </div>
         <div class="row">
             <div class="col-md-4" id="benefits">
                 <img src="img/houseGreen.png" class="icon">
@@ -126,11 +127,19 @@
                         <div class="carousel-item active">
                             <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
-                                <h4>
-                                    Third Thumbnail label
-                                </h4>
+                                <h1>Módulo 3</h1>
                                 <p>
-                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                    <b>Trabalhando com Camadas Vetoriais</b></br>
+                                    Criação de Shapes</br> 
+                                    Edição e Digitalização Avançada</br> 
+                                    Convertendo para Google Earth e AutoCAD</br> 
+                                    Importando pontos a partir do Excel</br> 
+                                    Extração de Coordenadas, Área e Perímetro</br> 
+                                    Estilizando Camadas Vetoriais</br> 
+                                    Trabalhando com Rótulos</br> 
+                                    Rotulagem baseada em Regras</br> 
+                                    Diagramas</br> 
+                                    Unindo Tabelas com Shapefiles</br>                
                                 </p>
                             </div>
                         </div>
@@ -138,10 +147,11 @@
                 </div>
             </div>
         </div>
-    </div>
-            </div>
         </div>
+
+            
     </div>
+</div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
