--- a/index.html
+++ b/index.html
@@ -142,6 +142,53 @@
                                 </p>
                             </div>
                         </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
+                            <div class="carousel-caption">
+                                <h1>Módulo 4</h1>
+                                <p>
+                                    <b>Funções, Ferramentas e Plugins</b></br>
+                                    Seleção por Localização</br>
+                                    Interseção, Diferença e Dissolver</br>                                   
+                                    União e Diferença Simétrica</br>                          
+                                    Reprojeção de Camadas</br>                                   
+                                    Buffers</br>                                   
+                                    Mapas de Calor e Centroide</br>                                   
+                                    Área total de Classes</br>                               
+                                    Criação de Geopackage</br>
+                                    Polígonos de Voronoi e Triangulação de Delaunay</br>
+                                    Calculadora de Campo</br>
+                                    Criação de Ações</br>
+                                    Geocodificação</br>
+                                    Criação de Rotas</br>
+                                    Mapas Online</br>
+                                    Animação Temporal</br>
+                                    Matriz de Distância</br>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
+                            <div class="carousel-caption">
+                                <h1>Módulo 5</h1>
+                                <p>
+                                    <b>Impressão de Mapas</b></br>
+                                    Introdução à Impressão de Mapas</br>
+                                    Layout de Impressão</br>
+                                    Propriedades do Mapa</br>
+                                    Grades e Enquadramento</br>
+                                    Imagens e Formas</br>
+                                    Texto e Tabela de Atributos</br>
+                                    Mapa de Localização</br>
+                                    Legenda</br>
+                                    Escala</br>
+                                    Exportação</br>
+                                    Atlas</br>
+                                </p>
+                            </div>
+                        </div>
+
+
                     </div> <a class="carousel-control-prev" href="#carousel-382039" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-382039" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
                 </div>
             </div>
