--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         <div class="carousel-item">
                             <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
-                                <h1>Módulo 1</h1>
-                                <p>
+                                <h1 class="modulesTitle">Módulo 1</h1>
+                                <p class="modulesText">
                                     <b>Teoria Express</b></br>
                                     Conceitos Iniciais</br>
                                     Tipos de Dados</br>                                   
@@ -99,8 +99,8 @@
                         <div class="carousel-item">
                             <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
-                                <h1>Módulo 2</h1>
-                                <p>
+                                <h1 class="modulesTitle">Módulo 2</h1>
+                                <p class="modulesText">
                                     <b>Introdução ao QGIS</b></br>
                                     Instalando o QGIS</br>                 
                                     Onde Baixar Dados</br>
@@ -126,8 +126,8 @@
                         <div class="carousel-item active">
                             <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
-                                <h1>Módulo 3</h1>
-                                <p>
+                                <h1 class="modulesTitle">Módulo 3</h1>
+                                <p class="modulesText">
                                     <b>Trabalhando com Camadas Vetoriais</b></br>
                                     Criação de Shapes</br> 
                                     Edição e Digitalização Avançada</br> 
@@ -145,8 +145,8 @@
                         <div class="carousel-item">
                             <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
-                                <h1>Módulo 4</h1>
-                                <p>
+                                <h1 class="modulesTitle">Módulo 4</h1>
+                                <p class="modulesText">
                                     <b>Funções, Ferramentas e Plugins</b></br>
                                     Seleção por Localização</br>
                                     Interseção, Diferença e Dissolver</br>                                   
@@ -170,8 +170,8 @@
                         <div class="carousel-item">
                             <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
-                                <h1>Módulo 5</h1>
-                                <p>
+                                <h1 class="modulesTitle">Módulo 5</h1>
+                                <p class="modulesText">
                                     <b>Impressão de Mapas</b></br>
                                     Introdução à Impressão de Mapas</br>
                                     Layout de Impressão</br>
@@ -187,17 +187,43 @@
                                 </p>
                             </div>
                         </div>
-
-
+                        <div class="carousel-item">
+                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
+                            <div class="carousel-caption">
+                                <h1 class="modulesTitle">Módulo 6</h1>
+                                <p class="modulesText">
+                                    <b>Trabalhando com Camadas Raster</b></br>
+                                    Baixando Imagens de Satélite</br>
+                                    Baixando Raster diretamente no QGIS</br>
+                                    Composição Colorida de Bandas</br>
+                                    Mosaico e Recorte de Raster</br>
+                                    Georreferenciando Imagem</br>
+                                    Mapa Hipsométrico</br>
+                                    Curvas de Nível</br>
+                                    Relevo e Declividade</br>
+                                    Cálculo de Volume</br>
+                                    Visualização 3D</br>
+                                    Histograma</br>
+                                    Geração de MDE</br>
+                                    Delimitação de Bacia Hidrográfica</br>
+                                    Classificação de Imagens</br>
+                                    ​Mapa de Inundação</br>
+                                </p>
+                            </div>
+                        </div>
                     </div> <a class="carousel-control-prev" href="#carousel-382039" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-382039" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
                 </div>
             </div>
         </div>
-        </div>
 
-            
+        <div class="row">
+            <div class="col-md-12" id="bonus">
+                <h1 class="bonusTitle">Você também terá acesso aos seguintes bônus:</h1>
+            </div>
+        </div>
+        
+
     </div>
-</div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
