add bonus section

--- a/index.html
+++ b/index.html
@@ -221,8 +221,29 @@
                 <h1 class="bonusTitle">Você também terá acesso aos seguintes bônus:</h1>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-3 bonuses">
+                <img src="img/downloadGreen.png" class="icon">
+                <h1 class="benefitTitle">Atualizações inclusas</h1>
+                <p class="benefitDescription">Nosso curso está em constante melhoria! E você terá acesso à todas as aulas adicionadas no futuro.</p>
+            </div>
+            <div class="col-md-3 bonuses">
+                <img src="img/uniGreen.png" class="icon">
+                <h1 class="benefitTitle">QGIS para o seu TCC</h1>
+                <p class="benefitDescription">Ideias práticas para você que ainda é estudante e precisa enfrentar o TCC. Te mostro como seu TCC pode ser feito em questão de horas com o QGIS.</p>
+            </div>
+            <div class="col-md-3 bonuses">
+                <img src="img/dataGreen.png" class="icon">
+                <h1 class="benefitTitle">E-Book com sites e bancos de dados</h1>
+                <p class="benefitDescription">Lista com mais de 100 sites onde você pode encontrar e baixar arquivos para utilizar em seus projetos.</p>
+            </div>
+            <div class="col-md-3 bonuses">
+                <img src="img/communityGreen.png" class="icon">
+                <h1 class="benefitTitle">Comunidade exclusiva de alunos</h1>
+                <p class="benefitDescription">Grupo exclusivo no Facebook, onde poderemos responder suas dúvidas e compartilhar conteúdos.</p>
+            </div>
+        </div>
         
-
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
