spacing bonus icons

--- a/index.html
+++ b/index.html
@@ -222,22 +222,24 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 bonuses">
+            <div class="col-md-6 bonuses">
                 <img src="img/downloadGreen.png" class="icon">
                 <h1 class="benefitTitle">Atualizações inclusas</h1>
                 <p class="benefitDescription">Nosso curso está em constante melhoria! E você terá acesso à todas as aulas adicionadas no futuro.</p>
             </div>
-            <div class="col-md-3 bonuses">
+            <div class="col-md-6 bonuses">
                 <img src="img/uniGreen.png" class="icon">
                 <h1 class="benefitTitle">QGIS para o seu TCC</h1>
                 <p class="benefitDescription">Ideias práticas para você que ainda é estudante e precisa enfrentar o TCC. Te mostro como seu TCC pode ser feito em questão de horas com o QGIS.</p>
             </div>
-            <div class="col-md-3 bonuses">
+        </div>
+        <div class="row">
+            <div class="col-md-6 bonuses">
                 <img src="img/dataGreen.png" class="icon">
                 <h1 class="benefitTitle">E-Book com sites e bancos de dados</h1>
                 <p class="benefitDescription">Lista com mais de 100 sites onde você pode encontrar e baixar arquivos para utilizar em seus projetos.</p>
             </div>
-            <div class="col-md-3 bonuses">
+            <div class="col-md-6 bonuses">
                 <img src="img/communityGreen.png" class="icon">
                 <h1 class="benefitTitle">Comunidade exclusiva de alunos</h1>
                 <p class="benefitDescription">Grupo exclusivo no Facebook, onde poderemos responder suas dúvidas e compartilhar conteúdos.</p>
