add bootstrap navbar

--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 <body>
     <div class="container-fluid">
         <div class="row headerLogo">
+            <nav class="navbar navbar-expand-md fixed-top">
+                <div class="col-md-6">
+                <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Logo do Descomplica QGIS" id="logo"></a>
+                </div>
             <div class="col-md-6">
-                <img src="img/logo.png" alt="Logo do Descomplica QGIS" id="logo">
+              <ul class="navbar-nav mr-auto menu">
+                <li><a class="nav-item" href="#">Home</a></li>
+                <li><a class="nav-item" href="#">Estrutura do Curso</a></li>
+                <li><a class="nav-item" href="#">Instrutor</a></li>
+                <li><a class="nav-item" href="#">Perguntas Frequentes</a></li>
+                <li><a class="nav-item" href="#">Contato</a></li>
+              </ul>
             </div>
-            <div class="col-md-6">
-                <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Estrutura do Curso</a></li>
-                    <li><a href="#">Instrutor</a></li>
-                    <li><a href="#">Perguntas Frequentes</a></li>
-                    <li><a href="#">Contato</a></li>
-                </ul>
-            </div>
+          </nav>
         </div>
 
         <div class="row">
