--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
             </div>
             <div class="col-md-6" id="instructorBio">
                 <h1 class="instructorTitle">INSTRUTOR</h1>
-                <br class="instructorDescription">
-                    Olá, meu nome é Leonardo Marques, Engenheiro, Mestre, Empreendedor e Instrutor de Treinamentos na Área Ambiental.</br></br>
+                <p class="instructorDescription">
+                    Olá, meu nome é Leonardo Marques, Engenheiro, Mestre, Empreendedor e Instrutor de Treinamentos na Área Ambiental.</p></br>
                     Como sócio-fundador da Ambientis Engenharia, uma empresa de consultoria ambiental, e doutorando em Saneamento Ambiental, trabalho diariamente produzindo mapas e realizando análises espaciais.
                     Este contato com o QGIS me proporcionou a combinação perfeita de experiência e prática neste programa.
                     Percebendo a deficiência de muitos profissionais nesta área, desenvolvi o Descomplica QGIS, um treinamento prático e direto no ensino do Geoprocessamento.
@@ -263,10 +263,87 @@
                     <b>Leonardo Marques</b></br>
                     <span class="italics">Criador do Treinamento "Descomplica QGIS"</span></br>
                     <a href="https://www.instagram.com/leomarques.eng/">@leomarques.eng</a>
-                    
                 </p>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-12 faq">
+                <h1 class="faqTitle">Perguntas Frequentes</h1>
+            </div>
+        </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div id="card-1">
+                        <div class="card">
+                            <div class="card-header">
+                                <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-1" href="#card-element-1"><h2 class="faqQuestion">O que está incluso neste valor?</h2></a>
+                            </div>
+                            <div id="card-element-1" class="collapse">
+                                <div class="card-body">
+                                    <o class="faqText">Ao realizar sua inscrição, você terá acesso completo ao curso (todos os módulos, incluindo bônus) e o suporte ao aluno por um período de dois anos.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                 <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-1" href="#card-element-2"><h2 class="faqQuestion">Por quanto tempo terei acesso às aulas?</h2></a>
+                            </div>
+                            <div id="card-element-2" class="collapse">
+                                <div class="card-body">
+                                    <p class="faqText">Você terá acesso a plataforma do curso e todos os bônus por 2 anos. O conteúdo estará disponível 24 horas por dia e você poderá ver e rever quantas vezes quiser.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                 <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-1" href="#card-element-3"><h2 class="faqQuestion">Como faço a compra? Como sei se é seguro?</h2></a>
+                            </div>
+                            <div id="card-element-3" class="collapse">
+                                <div class="card-body">
+                                    <p class="faqText">Você vai fazer a compra aqui por esta página, clicando no botão de inscrição, onde será redirecionado para a página de pagamento. O processamento é feito pela Hotmart, a maior empresa de venda de cursos digitais do Brasil. Eles processam milhões de pagamentos todos os meses, são rápidos, confiáveis e 100% seguros. Seus dados estarão 100% seguros nesta plataforma.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                 <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-1" href="#card-element-4"><h2 class="faqQuestion">Preciso ter experiência no QGIS?</h2></a>
+                            </div>
+                            <div id="card-element-4" class="collapse">
+                                <div class="card-body">
+                                    <p class="faqText">De forma alguma! O treinamento é estruturado de forma que você consiga aprender a utilizar o QGIS mesmo sem nenhum contato prévio com o programa ou com geotecnologias.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div id="card-2">
+                        <div class="card">
+                            <div class="card-header">
+                                <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-2" href="#card-element-6"><h2 class="faqQuestion">Este valor inclui a licença do QGIS?</h2></a>
+                            </div>
+                            <div id="card-element-6" class="collapse">
+                                <div class="card-body">
+                                    <O class="faqText">O QGIS é um programa gratuito! Não se preocupe com custos para utilizá-lo. No curso, você irá aprender a baixar a versão correta e realizar sua instalação.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                 <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-2" href="#card-element-7"><h2 class="faqQuestion">Como são as aulas?</h2></a>
+                            </div>
+                            <div id="card-element-7" class="collapse">
+                                <div class="card-body">
+                                    <p class="faqText">As aulas são no formato de vídeos (entre 4 e 20 minutos) com espaço para comentários e tira-dúvidas.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
     <div class="row">
         <div class="col-md-12 footer">
