add horizontal instructor bio

--- a/index.html
+++ b/index.html
@@ -249,21 +249,20 @@
         </div>
         
         <div class="row">
-            <div class="col-md-6 instructor" id="instructor">
+            <div class="col-md-12 instructor" id="instructorBio">
                 <img src="img/photo.jpg" class="photo">
-            </div>
-            <div class="col-md-6" id="instructorBio">
-                <h1 class="instructorTitle">INSTRUTOR</h1>
-                <p class="instructorDescription">
-                    Olá, meu nome é Leonardo Marques, Engenheiro, Mestre, Empreendedor e Instrutor de Treinamentos na Área Ambiental.</p></br>
-                    Como sócio-fundador da Ambientis Engenharia, uma empresa de consultoria ambiental, e doutorando em Saneamento Ambiental, trabalho diariamente produzindo mapas e realizando análises espaciais.
-                    Este contato com o QGIS me proporcionou a combinação perfeita de experiência e prática neste programa.
-                    Percebendo a deficiência de muitos profissionais nesta área, desenvolvi o Descomplica QGIS, um treinamento prático e direto no ensino do Geoprocessamento.
-                    Se você deseja dominar de uma vez por todas a ferramenta Nº 1 de produção de mapas, será um prazer ter você como aluno!</br></br>
-                    <b>Leonardo Marques</b></br>
-                    <span class="italics">Criador do Treinamento "Descomplica QGIS"</span></br>
-                    <a href="https://www.instagram.com/leomarques.eng/">@leomarques.eng</a>
-                </p>
+                    <div class="bio">
+                        <h1 class="instructorTitle">INSTRUTOR</h1>
+                        <p class="instructorDescription">
+                            Olá, meu nome é Leonardo Marques, Engenheiro, Mestre, Empreendedor e Instrutor de Treinamentos na Área Ambiental
+                            Como sócio-fundador da Ambientis Engenharia, uma empresa de consultoria ambiental, e doutorando em Saneamento Ambiental, trabalho diariamente produzindo mapas e realizando análises espaciais.
+                            Este contato com o QGIS me proporcionou a combinação perfeita de experiência e prática neste programa.
+                            Percebendo a deficiência de muitos profissionais nesta área, desenvolvi o Descomplica QGIS, um treinamento prático e direto no ensino do Geoprocessamento.
+                            Se você deseja dominar de uma vez por todas a ferramenta Nº 1 de produção de mapas, será um prazer ter você como aluno!</br></br>
+                            <b>Leonardo Marques</b> | <a href="https://www.instagram.com/leomarques.eng/">@leomarques.eng</a></br>
+                            <span class="italics">Criador do Treinamento "Descomplica QGIS"</span>
+                        </p>
+                    </div>
             </div>
         </div>
 
@@ -282,7 +281,7 @@
                             </div>
                             <div id="card-element-1" class="collapse">
                                 <div class="card-body">
-                                    <o class="faqText">Ao realizar sua inscrição, você terá acesso completo ao curso (todos os módulos, incluindo bônus) e o suporte ao aluno por um período de dois anos.</p>
+                                    <p class="faqText">Ao realizar sua inscrição, você terá acesso completo ao curso (todos os módulos, incluindo bônus) e o suporte ao aluno por um período de dois anos.</p>
                                 </div>
                             </div>
                         </div>
@@ -316,6 +315,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="card">
+                            <div class="card-header">
+                                 <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-1" href="#card-element-5"><h2 class="faqQuestion">Quem pode participar?</h2></a>
+                            </div>
+                            <div id="card-element-5" class="collapse">
+                                <div class="card-body">
+                                    <p class="faqText">O Descomplica QGIS é voltado para estudantes e profissionais das mais diversas áreas que necessitam produzir mapas e utilizar ferramentas de geoprocessamento. Não é necessário nível superior para participar do curso.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -338,6 +347,36 @@
                             <div id="card-element-7" class="collapse">
                                 <div class="card-body">
                                     <p class="faqText">As aulas são no formato de vídeos (entre 4 e 20 minutos) com espaço para comentários e tira-dúvidas.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                 <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-2" href="#card-element-8"><h2 class="faqQuestion">O curso é presencial?</h2></a>
+                            </div>
+                            <div id="card-element-8" class="collapse">
+                                <div class="card-body">
+                                    <p class="faqText">Não, o treinamento é 100% online. Após sua compra ser aprovada, você vai receber um email com login e senha para já começar a assistir as aulas na área virtual protegida por senha.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                 <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-2" href="#card-element-9"><h2 class="faqQuestion">Tem certificado para os participantes?</h2></a>
+                            </div>
+                            <div id="card-element-9" class="collapse">
+                                <div class="card-body">
+                                    <p class="faqText">Ao final do curso, será emitido um certificado de 60h/aula para o aluno que concluir o treinamento.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                 <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-2" href="#card-element-10"><h2 class="faqQuestion">E se eu tiver dúvidas?</h2></a>
+                            </div>
+                            <div id="card-element-10" class="collapse">
+                                <div class="card-body">
+                                    <p class="faqText">O suporte é realizado via área de membros, grupo no facebook, email ou até whatsapp, onde respondemos em até 48h úteis.</p>
                                 </div>
                             </div>
                         </div>
