--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
             <div class="col-md-12" id="firstBanner">
                 <h1 class="title">DOMINE A FERRAMENTA Nº 1 DE PRODUÇÃO DE MAPAS</h1>
                 <h2 class="subtitle">APRENDA QGIS DE FORMA RÁPIDA, PRÁTICA E DESCOMPLICADA</h2>
+                <button type="button" class="btn btn-primary">QUERO ME INSCREVER</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 video">
+                <iframe id="video" src="https://www.youtube.com/embed/oQ3eYsEEmHo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <button type="button" class="btn btn-primary" id="video-btn">QUERO ME INSCREVER</button>
             </div>
         </div>
 
@@ -73,6 +81,7 @@
                     Você se identificou com esse perfil? Já perdeu alguma oportunidade por não saber utilizar o QGIS? Já desistiu de fazer algum mapa porque travou em alguma etapa?</br></br>
                     <span class="bold">Então chegou a sua hora de dominar o QGIS de uma vez por todas!</span></br></br>
                 </p>
+                <button type="button" class="btn btn-primary" id="text-btn">QUERO ME INSCREVER</button>
             </div>
         </div>
 
