add contact box

--- a/index.html
+++ b/index.html
@@ -39,8 +39,19 @@
             <div class="col-md-12 video">
                 <iframe id="video" src="https://www.youtube.com/embed/oQ3eYsEEmHo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <button type="button" class="btn btn-primary" id="video-btn">QUERO ME INSCREVER</button>
+                    <div class="row">
+                        <div class="col-md-4 benefits">
+                            <img src="img/icon2Green.png" class="description">
+                        </div>
+                        <div class="col-md-4 benefits">
+                            <img src="img/icon3Green.png" class="description">
+                        </div>
+                        <div class="col-md-4 benefits">
+                            <img src="img/icon5Green.png" class="description">
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
 
         <div class="row">
             <div class="col-md-12" id="iconsTitle">
@@ -282,7 +293,7 @@
         </div>
 
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 faqBox">
                     <div id="card-1">
                         <div class="card">
                             <div class="card-header">
@@ -390,6 +401,12 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 contact">
+                    <h1 class="contactTitle">Ainda tem alguma dúvida? Fale diretamente conosco clicando no botão do WhatsApp ao lado ou através do email contato@descomplicaqgis.com.br.</h1>
                 </div>
             </div>
 
