--- a/index.html
+++ b/index.html
@@ -102,11 +102,10 @@
                 <div class="carousel slide" id="carousel-382039">
                     <div class="carousel-inner">
                         <div class="carousel-item">
-                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
                                 <h1 class="modulesTitle">Módulo 1</h1>
                                 <p class="modulesText">
-                                    <b>Teoria Express</b></br>
+                                    <b>Teoria Express</b></br></br>
                                     Conceitos Iniciais</br>
                                     Tipos de Dados</br>                                   
                                     Datum</br>                          
@@ -119,11 +118,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
                                 <h1 class="modulesTitle">Módulo 2</h1>
                                 <p class="modulesText">
-                                    <b>Introdução ao QGIS</b></br>
+                                    <b>Introdução ao QGIS</b></br></br>
                                     Instalando o QGIS</br>                 
                                     Onde Baixar Dados</br>
                                     Interface do Programa</br>                     
@@ -146,11 +144,10 @@
                             </div>
                         </div>
                         <div class="carousel-item active">
-                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
                                 <h1 class="modulesTitle">Módulo 3</h1>
                                 <p class="modulesText">
-                                    <b>Trabalhando com Camadas Vetoriais</b></br>
+                                    <b>Trabalhando com Camadas Vetoriais</b></br></br>
                                     Criação de Shapes</br> 
                                     Edição e Digitalização Avançada</br> 
                                     Convertendo para Google Earth e AutoCAD</br> 
@@ -165,11 +162,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
                                 <h1 class="modulesTitle">Módulo 4</h1>
                                 <p class="modulesText">
-                                    <b>Funções, Ferramentas e Plugins</b></br>
+                                    <b>Funções, Ferramentas e Plugins</b></br></br>
                                     Seleção por Localização</br>
                                     Interseção, Diferença e Dissolver</br>                                   
                                     União e Diferença Simétrica</br>                          
@@ -190,11 +186,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
                                 <h1 class="modulesTitle">Módulo 5</h1>
                                 <p class="modulesText">
-                                    <b>Impressão de Mapas</b></br>
+                                    <b>Impressão de Mapas</b></br></br>
                                     Introdução à Impressão de Mapas</br>
                                     Layout de Impressão</br>
                                     Propriedades do Mapa</br>
@@ -210,11 +205,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" alt="Carousel Background" src="img/banner1.jpg"/>
                             <div class="carousel-caption">
                                 <h1 class="modulesTitle">Módulo 6</h1>
                                 <p class="modulesText">
-                                    <b>Trabalhando com Camadas Raster</b></br>
+                                    <b>Trabalhando com Camadas Raster</b></br></br>
                                     Baixando Imagens de Satélite</br>
                                     Baixando Raster diretamente no QGIS</br>
                                     Composição Colorida de Bandas</br>
