add new section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,42 @@
         </div>
 
         <div class="row">
+            <div class="col-md-12" id="iconsTitle">
+                <h1 class="exampleTitle">Você aprenderá o passo a passo para produzir (e muito mais):</h1>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-md-4 examples">
+                <img src="img/feature1.webp" class="example">
+                <h1 class="exampleCaption">Mapas Temáticos</h1>
+            </div>
+            <div class="col-md-4 examples">
+                <img src="img/feature2.webp" class="example">
+                <h1 class="exampleCaption">Mapas para Licenciamento Ambiental</h1>
+            </div>
+            <div class="col-md-4 examples">
+                <img src="img/feature3.webp" class="example">
+                <h1 class="exampleCaption">Análises Espaciais</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-4 examples">
+                <img src="img/feature4.webp" class="example">
+                <h1 class="exampleCaption">Cobertura e Uso da Terra</h1>
+            </div>
+            <div class="col-md-4 examples">
+                <img src="img/feature5.webp" class="example">
+                <h1 class="exampleCaption">Visualização 3D</h1>
+            </div>
+            <div class="col-md-4 examples">
+                <img src="img/feature6.webp" class="example">
+                <h1 class="exampleCaption">Relevo</h1>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-12" id="carousel">
                 <h1 class="carouselTitle">Estrutura do Curso (Turma Avançada) </h1>
                 <div class="carousel slide" id="carousel-382039">
