add functional menu buttons

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="col-md-6">
               <ul class="navbar-nav mr-auto menu">
                 <li><a class="nav-item" href="#">Home</a></li>
-                <li><a class="nav-item" href="#">Estrutura do Curso</a></li>
-                <li><a class="nav-item" href="#">Instrutor</a></li>
-                <li><a class="nav-item" href="#">Perguntas Frequentes</a></li>
-                <li><a class="nav-item" href="#">Contato</a></li>
+                <li><a class="nav-item" href="#carousel">Estrutura do Curso</a></li>
+                <li><a class="nav-item" href="#instructorBio">Instrutor</a></li>
+                <li><a class="nav-item" href="#faq">Perguntas Frequentes</a></li>
+                <li><a class="nav-item" href="#contact">Contato</a></li>
               </ul>
             </div>
           </nav>
@@ -317,7 +317,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-12 faq">
+            <div class="col-md-12 faq" id="faq">
                 <h1 class="faqTitle">Perguntas Frequentes</h1>
             </div>
         </div>
@@ -435,7 +435,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-12 contact">
+                <div class="col-md-12 contact" id="contact">
                     <h1 class="contactTitle">Ainda tem alguma dúvida? Fale diretamente conosco clicando no botão do WhatsApp ao lado ou através do email contato@descomplicaqgis.com.br.</h1>
                 </div>
             </div>
