add payment methods

--- a/index.html
+++ b/index.html
@@ -269,6 +269,31 @@
         </div>
 
         <div class="row">
+            <div class="col-md-12">
+                <h1 class="priceTitle">Valor Promocional</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <p class="priceDescription"><span class="promotion">R$ 247,00</span> em até 12x no cartão</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 paymentBox">
+                <img src="img/cc1.png" alt="Mastercard" class="payment">
+                <img src="img/cc2.png" alt="Visa" class="payment">
+                <img src="img/cc3.png" alt="American Express" class="payment">
+                <img src="img/cc4.png" alt="Elo" class="payment">
+                <img src="img/cc5.png" alt="Hipercard" class="payment">
+                <img src="img/cc6.png" alt="Hiper" class="payment">
+                <img src="img/cc7.png" alt="Diners Club" class="payment">
+                <img src="img/cc8.png" alt="Paypal" class="payment">
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-12" id="bonus">
                 <h1 class="bonusTitle">Você também terá acesso aos seguintes bônus:</h1>
             </div>
