--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
                 <iframe id="video" src="https://www.youtube.com/embed/oQ3eYsEEmHo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <button type="button" class="btn btn-primary" id="video-btn">QUERO ME INSCREVER</button>
                     <div class="row">
-                        <div class="col-md-4 benefits">
+                        <div class="col-md-3 benefits">
                             <img src="img/icon2Green.png" class="description">
                         </div>
-                        <div class="col-md-4 benefits">
+                        <div class="col-md-3 benefits">
                             <img src="img/icon3Green.png" class="description">
                         </div>
-                        <div class="col-md-4 benefits">
+                        <div class="col-md-3 benefits">
                             <img src="img/icon5Green.png" class="description">
+                        </div>
+                        <div class="col-md-3 benefits">
+                            <img src="img/icon1Green.png" class="description">
                         </div>
                     </div>
                 </div>
@@ -276,7 +279,7 @@
 
         <div class="row">
             <div class="col-md-12">
-                <p class="priceDescription"><span class="promotion">R$ 247,00</span> em até 12x no cartão</p>
+                <p class="priceDescription"><span class="promotion">R$ 197,00</span> em até 12x no cartão</p>
             </div>
         </div>
 
@@ -290,6 +293,12 @@
                 <img src="img/cc6.png" alt="Hiper" class="payment">
                 <img src="img/cc7.png" alt="Diners Club" class="payment">
                 <img src="img/cc8.png" alt="Paypal" class="payment">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12" id="payment-btn">
+                <button type="button" class="btn btn-primary">QUERO ME INSCREVER</button>
             </div>
         </div>
 
