--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                 </p>
                             </div>
                         </div>
-                    </div> <a class="carousel-control-prev" href="#carousel-382039" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-382039" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+                    </div> <a class="carousel-control-prev" href="#carousel-382039"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-382039" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
                 </div>
             </div>
         </div>
