--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row greenBackground">
             <div class="col-md-12 video">
                 <iframe id="youtubePlayer" src="https://www.youtube.com/embed/oQ3eYsEEmHo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <button type="button" class="btn btn-primary" id="video-btn">QUERO ME INSCREVER</button>
@@ -84,7 +84,7 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row greenBackground">
             <div class="col-md-6" id="mapImage">
                 <img src="img/banner2.jpg" class="map">
             </div>
@@ -140,12 +140,13 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row greenBackground">
             <div class="col-md-12" id="estrutura">
                 <h1 class="defaultTitle">Estrutura do Curso (Turma Avançada)</h1>
             </div>
         </div>
 
+        <div class="row carouselBox greenBackground">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -272,6 +273,7 @@
               <span class="sr-only">Próximo</span>
             </a>
           </div>
+        </div>
 
         <div class="row">
             <div class="col-md-12" id="bonus">
@@ -303,13 +305,13 @@
             </div>
         </div>
 
-        <div class="row">
+        <div class="row greenBackground">
             <div class="col-md-12" id="alunos">
                 <h1 class="defaultTitle">Confira alguns mapas produzidos por nossos mais de 500 alunos:</h1>
             </div>
         </div>
 
-        <div class="row carouselBox">
+        <div class="row carouselBox greenBackground">
         <div id="carouselAlunos" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" id="carouselContent">
               <div class="carousel-item active">
@@ -379,7 +381,7 @@
             </div>
         </div>
         
-        <div class="row">
+        <div class="row greenBackground">
             <div class="col-md-12 instrutor" id="instrutor">
                 <img src="img/photo.jpg" class="photo">
                     <div class="bio">
