add functional button

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             <div class="col-md-12" id="bannerInicial">
                 <h1 class="title">DOMINE A FERRAMENTA Nº 1 DE PRODUÇÃO DE MAPAS</h1>
                 <h2 class="subtitle">APRENDA QGIS DE FORMA RÁPIDA, PRÁTICA E DESCOMPLICADA</h2>
-                <button type="button" class="btn btn-primary">QUERO ME INSCREVER</button>
+                <a class="nav-item" href="https://pay.hotmart.com/L14715581R?checkoutMode=0&bid=1595008160663" target="external"><button type="button" class="btn btn-primary">QUERO ME INSCREVER</button></a>
             </div>
         </div>
 
         <div class="row greenBackground">
             <div class="col-md-12 video">
                 <iframe id="youtubePlayer" src="https://www.youtube.com/embed/oQ3eYsEEmHo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <button type="button" class="btn btn-primary" id="video-btn">QUERO ME INSCREVER</button>
+                <a class="nav-item" href="https://pay.hotmart.com/L14715581R?checkoutMode=0&bid=1595008160663" target="external"><button type="button" class="btn btn-primary" id="video-btn">QUERO ME INSCREVER</button></a>
                     <div class="row">
                         <div class="col-md-3 benefits">
                             <img src="img/icon2Green.png" class="description">
@@ -100,7 +100,7 @@
                     Você se identificou com esse perfil? Já perdeu alguma oportunidade por não saber utilizar o QGIS? Já desistiu de fazer algum mapa porque travou em alguma etapa?</br></br>
                     <span class="bold">Então chegou a sua hora de dominar o QGIS de uma vez por todas!</span></br></br>
                 </p>
-                <button type="button" class="btn btn-primary" id="text-btn">QUERO ME INSCREVER</button>
+                <a class="nav-item" href="https://pay.hotmart.com/L14715581R?checkoutMode=0&bid=1595008160663" target="external"><button type="button" class="btn btn-primary" id="text-btn">QUERO ME INSCREVER</button></a>
             </div>
         </div>
 
@@ -377,7 +377,7 @@
 
         <div class="row">
             <div class="col-md-12" id="payment-btn">
-                <button type="button" class="btn btn-primary">QUERO ME INSCREVER</button>
+                <a class="nav-item" href="https://pay.hotmart.com/L14715581R?checkoutMode=0&bid=1595008160663" target="external"><button type="button" class="btn btn-primary">QUERO ME INSCREVER</button></a>
             </div>
         </div>
         
